# medusa-pos

./: .env.example  .gitignore  .yarnrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  components.json  eslint.config.js  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
integration-tests/: .env  .env.example  .gitignore  README.md  docker-compose.yml
integration-tests/medusa/: Dockerfile  entrypoint.sh  medusa-config.ts  narisolutions-medusa-plugin-pos-0.1.0.tgz  package.json  tsconfig.json
public/: splash.html
src/: App.tsx  globals.css  main.tsx
src-tauri/: .gitignore  Cargo.toml  build.rs  check_variants.rs  tauri.conf.json  temp_test.rs
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  keyboard.rs  lib.rs  main.rs  winprint.rs
src/assets/icons/: card.tsx  checkout.tsx  medusa.tsx  payments.tsx  voucher.tsx
src/components/auth/: hooks.ts  index.tsx
src/components/checkout/: hooks.ts  index.tsx
src/components/hoc/: error-fallback.tsx  with-error-boundary.tsx
src/components/layout/: index.tsx
src/components/order/: hooks.ts  index.tsx
src/components/orders/: hooks.tsx  index.tsx
src/components/router/: index.tsx
src/components/settings/: index.tsx
src/components/ui/: checkbox.tsx  command.tsx  dialog.tsx  input.tsx  numpad.tsx  select.tsx  sidebar.tsx  switch.tsx  table.tsx  tooltip.tsx
src/config/: medusa.ts  query.ts
src/context/cart/: index.ts
src/context/sales-channel/: index.ts
src/context/store/: index.ts
src/context/store-manager/: index.ts
src/context/theme/: index.ts
src/context/user/: index.ts
src/context/virtual-keyboard/: index.tsx
src/hooks/: useUpdateCheck.ts
src/hooks/auth/: useAppInit.ts
src/hooks/barcode/: useBarcodePaste.ts
src/hooks/draft-order/: useDraftOrder.ts
src/hooks/order/: useOrder.ts  useOrderProcessing.ts
src/hooks/printer/: usePrinterService.ts
src/hooks/queries/: useQueryInventoryKitItems.ts  useQueryOrder.ts  useQueryOrders.ts  useQueryPaymentProviders.ts  useQueryPosPlugin.ts  useQueryProductByBarcode.ts  useQueryProducts.ts  useQueryPromotions.ts  useQueryRegion.ts  useQuerySalesChannel.ts  useQueryShippingOption.ts  useQueryStockLocation.ts  useQueryStore.ts  useUnfulfilledOrdersCount.ts
src/hooks/ui/: useApplyStoreTheme.ts  useApplyTheme.ts  useCustomEndpoints.ts  useDebounce.ts  useFullscreenToggle.ts
src/hooks/update/: useUpdateCheck.ts
src/hooks/utils/: useChange.ts
src/i18n/: index.ts
src/i18n/locales/: de.json  en.json  es.json  fr.json  ka.json  pl.json  sv.json
src/pages/checkout/: index.tsx
src/pages/login/: index.tsx
src/router/: router.tsx
src/types/: form.ts  preferences.ts  utils.ts
(+101 files in other folders)
