[package]
name = "medusa-pos"
version = "0.1.0"
description = "Point of Sale application for MedusaJS"
authors = ["Nari Solutions"]
edition = "2021"

[features]
default = []
devtools = ["tauri/devtools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "medusa_pos_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
serde_json = "1"

[dependencies]
tauri = { version = "2.10", features = ["protocol-asset", "wry"], default-features = false }
tauri-plugin-opener = "2.5"
tauri-plugin-store = "2.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
escpos = { version = "0.15.2", features = ["graphics"] }
tauri-plugin-http = "2.5.7"
tauri-plugin-fs = "2.4"
tauri-plugin-dialog = "2.6"
log = "0.4.27"
tauri-plugin-log = "2.8"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"

