[package]
name = "medusa-pos"
version = "0.1.0"
description = "Point of Sale application for MedusaJS"
authors = ["Nari Solutions"]
edition = "2021"

[features]
default = []
devtools = ["tauri/devtools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "medusa_pos_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
serde_json = "1"

[dependencies]
tauri = { version = "2.11", features = ["protocol-asset", "wry"], default-features = false }
tauri-plugin-opener = "2.5"
tauri-plugin-store = "2.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# `usb` uses rusb/libusb and scans all interfaces for bulk IN+OUT — fixes Windows
# "no suitable interface number found" from `native_usb` (nusb) when `interfaces()` is empty.
escpos = { version = "0.16.0", features = ["graphics", "usb"] }
rusb = "0.9"
tauri-plugin-http = "2.5.9"
tauri-plugin-fs = "2.4"
tauri-plugin-dialog = "2.7"
log = "0.4.27"
tauri-plugin-log = "2.8"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Devices_HumanInterfaceDevice",
    "Win32_UI_Input",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Printing",
    "Win32_Graphics_Gdi",
    "Win32_Security",
] }

